

==============================
Release 3.0.0.0
==============================
2015-12-21    The MouseEx now can set the current cursor position either instantly, or from a point over a period of time
2015-12-21    Ready implemented the new KeyboardEx to work without the MSTest CodedUI framework running
              Nearly ready implemented the new MouseEx to work without the MSTest CodedUI framework running (Some new functionality is missing)
2015-12-16    Start bring CodedUI stand alone. Target is to be able to let it run with Visual Studio 2015 Professional or lower
              MouseEx: Emulate click and doubleclick with specific mouse buttons without the MSTest CodedUI framework running


==============================
Release 2.4.2.X
==============================
2015-04-08    WindowFinder: Add possibility to find a window by its automation ID


==============================
Release 2.4.1.X
==============================
2015-03-27    LogWriter: Add possibility to let log files be written instantly when an action happen
2015-03-22    LogWriter: Add some settings how exactly the log line should be formatted


==============================
Release 2.4.0.X
==============================
2015-02-20    CodedUIEnvironment: The listener was not configurable
              LoggedException: Add LoggedException to write error to the activity logs
              LogWriter: Add configurable activity logs
2015-02-14    Add possibilies to the the window size, position and state into the BasicWindow.Unsafe
              WindowSetup: Add new WindowSetup object for a more easy window setup
2015-02-10    CodedUIEnvironment: Add possibility to configure the listeners from the CodedUIEnvironment
              *Listener: Allow async invoke of the listener events
2015-01-10    BasicElementData: Add IsEnabled property
              BasicElementData: Add IsVisible property
              *Listener: Add possibility to get informed if a window or element state changed